vards-slugify, carosel controls - ok

--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -2,14 +2,14 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
  <th>Nodarbības laiks</th>
  <th>Nodarbība</th>
  <th>Treneris</th>
  <th>Zāle</th>
- <th>Brīvo vietu skaits</th>
+ <th>Vietas</th>
 </tr></thead>
 
 <tbody>
