--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -35,8 +35,8 @@
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
- <th colspan="2">Diena</th>
- <th>Nodarbības laiks</th>
+ <th>Diena</th>
+ <th colspan="2">Nodarbības laiks</th>
  <th>Nodarbība</th>
  <th>Treneris</th>
  <th>Zāle</th>
