--- a/pieraksts/templates/select.html
+++ b/pieraksts/templates/select.html
@@ -1,29 +1,18 @@
 {% extends 'treneri.html' %}
 
 {% block select %}
-<div id="myCarousel" class="carousel slide" data-interval="false" data-wrap="false">
- <div class="carousel-inner" role="listbox">
+<!-- <div id="myCarousel" class="carousel slide carousel-sync" data-interval="false" data-wrap="false" data-ride="carousel">-->
+<div id="carousel-b" class="carousel slide carousel-sync" data-wrap="false">
+ <div class="carousel-inner"> <!-- role="listbox"> -->
   <div class="item active">
-<!--   <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="border:1px solid black;"> -->
 
 {% for gra in grafiks %}
    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="padding-left:0px; padding-right:0px;">
-    <div id="datums"  style="border:1px solid black; margin:1px 1px 1px 1px;"><center>{{ gra.0.sakums|date:"d/m l" }}</center></div>
-{% for g in gra %}
-
-<!-- if:
-	1- vietu daudz == div zaļš
-	2- viena vieta == div dzeltens
-	3- vietu nav == div sarkans, bez linka
- -->
-{% if g.vietas != 0 %}    <div id="nodarb_t"><a href="/pieraksts/{{ g.id }}/"><span></span></a>{% else %}    <div id="nodarb_p">{% endif %}
-
-     {{ g.sakums|date:"H:i" }}
-
-<!-- | {{ g.treneris }} | {{ g.vietas }}-->
-
-    </div>
-{% endfor %}
+    <div id="datums"><strong>{{ gra.0.sakums|date:"d/m" }}</strong> {{ gra.0.sakums|date:"l" }}</div>
+{% for g in gra %}{% if g.vietas != 0 %}    <a href="/pieraksts/{{ g.id }}/"><button class="btn btn-default" type="button" style="width:100%;">
+{% else %}    <button class="btn btn-danger" type="button" style="width:100%;">{% endif %}
+ {{ g.sakums|date:"H:i" }} {% if g.vietas != 0 %}<span class="badge" style="width:auto;">{{ g.vietas }}</span>{% endif %}
+</button></a>{% endfor %}
    </div>
 
 {% if forloop.counter == 4 and carousel_end != forloop.counter %}  </div>
@@ -38,21 +27,30 @@
   <div class="item">{% endif %}
 {% if forloop.counter == 24 and carousel_end != forloop.counter %}  </div>
   <div class="item">{% endif %}
-
 {% endfor %}
-
-<!-- </div> -->
  </div>
 
- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-  <span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="margin-top:21px;"></span>
-  <span class="sr-only">Previous</span>
- </a>
- <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-  <span class="glyphicon glyphicon-arrow-right" aria-hidden="true" style="margin-top:21px;"></span>
-  <span class="sr-only">Next</span>
- </a>
+ <a class="left carousel-control" href="#carousel-b" data-slide="prev" style="margin-top:-5px;"><span class="glyphicon glyphicon-chevron-left"></span></a>
+ <a class="right carousel-control" href="#carousel-b" data-slide="next" style="margin-top:-5px;"><span class="glyphicon glyphicon-chevron-right"></span></a>
+
 </div>
 <div class="row" style="padding-top:22px;"></div>
+{% endblock %}
 
+{% block javascript %}
+<script>
+$('#carousel-b').bind('slid.bs.carousel', function (e)
+        {
+            var $this = $(this);
+            $this.children('.carousel-control').show();
+
+            if ($('.carousel-inner .item:last').hasClass('active'))
+            {
+                $this.children('.right.carousel-control').hide();
+            } else if ($('.carousel-inner .item:first').hasClass('active'))
+            {
+                $this.children('.left.carousel-control').hide();
+            }
+        });
+</script>
 {% endblock %}
