dual pieteikums in progress

--- a/pieraksts/templates/pieraksts.html
+++ b/pieraksts/templates/pieraksts.html
@@ -27,14 +27,14 @@
 <div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
 {% if msg %}
  <div class="alert alert-success" role="alert">
-  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-  <strong> {{ msg }}</strong>
+  <span class="glyphicon glyphicon-ok" aria-hidden="true"> </span>
+  <strong>&nbsp;&nbsp; {{ msg }}</strong>
  </div>
 {% endif %}
 {% if error %}
  <div class="alert alert-danger" role="alert">
-  <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
-  <strong> {{ error_msg }}</strong>
+  <span class="glyphicon glyphicon-alert" aria-hidden="true"> </span>
+  <strong>&nbsp;&nbsp; {{ error_msg }}</strong>
  </div>
 {% endif %}
 <form action="/pieraksts/{{ g_id }}/" method=POST>
