dual pieraksts denied - ok

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,9 @@
 <head>
 <title>Pieraksta sistēma - {{ title }}</title>
  <meta charset="UTF-8">
- <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+ <meta name="description" content="Fitnesa un sporta klubs Veselības Fabrika - sporta klubs jebkuram vecumam un dažādai fiziskajai sagatavotībai. Labākie Treneri, Nodarbības, Personāltreniņi.">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.css' %}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
