--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -19,7 +19,7 @@ p{ padding:0px; margin:0px; text-align: left; }
 {% if t == "any" %}
  <a href="/select/{{ nodarb_slug }}/any/"><span></span></a>
  <p><strong>Jebkurš brīvais</strong></p>
- <img id="avatar" src="{% static 'any.jpg' %}">
+ <img id="avatar" src="{% static 'vf-logo.png' %}">
 {% else %}
 {% if treneri.0 == "any" %}
  <a href="/select/{{ nodarb_slug }}/{{ t.slug }}/"><span></span></a>
