--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
  <meta charset="UTF-8">
  <meta name="description" content="Fitnesa un sporta klubs Veselības Fabrika - sporta klubs jebkuram vecumam un dažādai fiziskajai sagatavotībai. Labākie Treneri, Nodarbības, Personāltreniņi.">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+ <link rel="shortcut icon" type="image/png" href="{% static 'vf-logo.png' %}"/>
  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.css' %}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
