--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
 <head>
 <title>{{ title }}</title>
  <meta charset="UTF-8">
- <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+ <link rel="shortcut icon" type="image/png" href="{% static 'vf-logo.png' %}"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.css' %}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
