--- a/grafiks/templates/day_kli_data.html
+++ b/grafiks/templates/day_kli_data.html
@@ -5,28 +5,30 @@
 
 {% block content %}
 
-<a href="/reception/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br>
+<a href="/reception/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
 
-<a href="/reception/cancel/{{ g_id }}/">Nodarbību atcēla</a><br>
+<a href="/reception/cancel/{{ g_id }}/"><button type="button" class="btn btn-danger btn-xs">Nodarbību atcēla</button></a><br>
 
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
+ <th></th>
  <th>Pierakstīšanās laiks</th>
  <th>Vārds Uzvārds</th>
  <th>E-pasts</th>
  <th>Tālrunis</th>
- <th style="text-align:center;">Ieradās</th>
+<!-- <th style="text-align:center;">Ieradās</th> -->
 </tr></thead>
 
 <tbody>
 {% for d in data %}
 <tr>
+ <td><a href="#"><button type="button" class="btn btn-default btn-xs">Atcelt Pierakstu</button></a></td>
  <td>{{ d.pieraksta_laiks|date:"d/m/Y H:i" }}</td>
  <td>{{ d.klients }}</td>
  <td>{{ d.klients.e_pasts }}</td>
  <td>{{ d.klients.tel }}</td>
- <td style="text-align:center;"><input type="checkbox" value="" class="disabled_checkbox"></td>
+<!-- <td style="text-align:center;"><input type="checkbox" value="" class="disabled_checkbox"></td> -->
 </tr>
 {% endfor %}
 </tbody>
