--- a/grafiks/templates/login.html
+++ b/grafiks/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'admin.html' %}
+{% extends 'loginsys.html' %}
 {% block logsys %}
 <form action="/reception/login/" method=POST>
     <div class="col-md-5 col-md-offset-3">
