--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,6 +23,7 @@
 
  <ul class="nav navbar-nav navbar-xs">
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
+  <li><a target="_blank" href="http://85.9.209.213/adminlucy12345/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
   <li><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Nodarbību dzēšana</a></li>
   <li><a href="/reception/add/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li>
