--- a/grafiks/templates/day_header.html
+++ b/grafiks/templates/day_header.html
@@ -1,7 +1,8 @@
 {% extends 'admin.html' %}
 {% block style %}
-.nav-tabs > li > a{ color: #000; background-color:#eee; }
-.nav-tabs > li > a:hover{ background-color: #ccc !important; color:#fff; }
+.nav-tabs > li > a{ color: #000; background-color:#eee; border:solid #ccc 1px; }
+.nav-tabs > li > a:hover{ background-color: #ccc !important; color:#fff; border:solid #ccc 1px; }
+
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {  background-color: #9b9da0; }
 {% endblock %}
 
@@ -12,8 +13,8 @@
 {% if d == title %}<li class="active">{% else %}<li>{% endif %}
 
 {% if d == shodiena and d != title %}
-<a href="/reception/day/{{ forloop.counter0 }}/" style="background-color:#aaa;">{{ d|date:"d/m" }}</a></li>{% else %}
-<a href="/reception/day/{{ forloop.counter0 }}/">{{ d|date:"d/m" }}</a></li>{% endif %}{% endfor %}
+<a href="/reception/day/{{ forloop.counter0 }}/" style="background-color:#888;">{{ d|date:"D d/m" }}</a></li>{% else %}
+<a href="/reception/day/{{ forloop.counter0 }}/">{{ d|date:"D d/m" }}</a></li>{% endif %}{% endfor %}
 
 </ul>
 <!-- </div></div> -->
