--- a/grafiks/templates/day_cancel_data.html
+++ b/grafiks/templates/day_cancel_data.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 
-<a href="/reception/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
+<a href="/reception/day/{{ d_id }}/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
 
-<a href="/reception/nod/{{ g_id }}/"><button type="button" class="btn btn-success btn-xs">Pieteikumi uz nodarbību</button></a><br>
+<a href="/reception/nod/{{ d_id }}/{{ g_id }}/"><button type="button" class="btn btn-success btn-xs">Pieteikumi uz nodarbību</button></a><br>
 
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
