--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -15,12 +15,12 @@
 <tbody>
 {% for d in data %}
 <tr>
- <td><a href="/reception/nod/{{ d.id }}/">{{ d.sakums|date:"H:i" }}</a></td>
- <td><a href="/reception/nod/{{ d.id }}/">{{ d.nodarbiba }}</a></td>
- <td><a href="/reception/nod/{{ d.id }}/">{{ d.treneris }}</a></td>
- <td><a href="/reception/nod/{{ d.id }}/">{{ d.telpa }}</a></td>
- <td><a href="/reception/nod/{{ d.id }}/">{{ d.vietas }}</a></td>
- <td><a href="{{ d.id }}"><button type="button" class="btn btn-default btn-xs">Pierakstīties</button></a></td>
+ <td><a href="/reception/nod/{{ d_id }}/{{ d.id }}/">{{ d.sakums|date:"H:i" }}</a></td>
+ <td><a href="/reception/nod/{{ d_id }}/{{ d.id }}/">{{ d.nodarbiba }}</a></td>
+ <td><a href="/reception/nod/{{ d_id }}/{{ d.id }}/">{{ d.treneris }}</a></td>
+ <td><a href="/reception/nod/{{ d_id }}/{{ d.id }}/">{{ d.telpa }}</a></td>
+ <td><a href="/reception/nod/{{ d_id }}/{{ d.id }}/">{{ d.vietas }}</a></td>
+ <td><a href="/reception/cancel/{{ g_id }}/{{ d.id }}/"><button type="button" class="btn btn-default btn-xs">Pierakstīties</button></a></td>
 </tr>
 {% endfor %}
 </tbody>
