--- a/grafiks/templates/day_kli_data.html
+++ b/grafiks/templates/day_kli_data.html
@@ -5,9 +5,14 @@
 
 {% block content %}
 
-<a href="/reception/day/{{ d_id }}/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
+<a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br><br>
 
-<a href="/reception/canceled/{{ d_id }}/{{ g_id }}/"><button type="button" class="btn btn-danger btn-xs">Nodarbību atcēla</button></a><br>
+<div class="row"><div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+<a href="/reception/atteikumi/{{ d_id }}/{{ g_id }}/"><button type="button" class="btn btn-danger">Nodarbību atcēla</button></a><br></div>
+
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="text-align: right;">
+<a href="/reception/print_nod/{{ d_id }}/{{ g_id }}/" target="_blank"><button type="button" class="btn btn-warning" style="color: black;">
+<span class="glyphicon glyphicon-print" aria-hidden="true"></span> DRUKĀT</button></a></div></div>
 
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
@@ -23,7 +28,7 @@
 <tbody>
 {% for d in data %}
 <tr>
- <td><a href="/reception/cancel/{{ g_id }}/{{ d.id }}/"><button type="button" class="btn btn-default btn-xs">Atcelt Pierakstu</button></a></td>
+ <td><a href="/reception/cancel/{{ d_id }}/{{ g_id }}/{{ d.id }}/"><button type="button" class="btn btn-default btn-xs">Atcelt Pierakstu</button></a></td>
  <td>{{ d.pieraksta_laiks|date:"d/m/Y H:i" }}</td>
  <td>{{ d.klients }}</td>
  <td>{{ d.klients.e_pasts }}</td>
@@ -32,4 +37,5 @@
 </tr>
 {% endfor %}
 </tbody>
+</div>
 {% endblock %}
