--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,6 +15,13 @@
 </head>
 <body>
 
+<div class="modal fade" id="Help" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog"><div class="modal-content" data-dismiss="modal">
+<div class="modal-body">
+ <h3 style="margin-top:5px;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></h3>
+ <center><h4>Jautājumi par sistēmu - Aleksandrs &nbsp;<span class="glyphicon glyphicon-phone-alt"></span> &nbsp;22458469</h4></center>
+</div></div></div></div>
+
 <nav class="navbar-xs navbar-default">
 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#topNavbar" aria-expanded="false">
  <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -26,12 +33,12 @@
   <li><a target="_blank" href="http://85.9.209.213/adminlucy12345/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
   <li><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Nodarbību dzēšana</a></li>
-  <li><a href="/reception/add/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li>
+<!--  <li><a href="/reception/add/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li> -->
 {% endif%}
  </ul>
 
  <ul class="nav navbar-nav navbar-right">
-  <li><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> &nbsp;RTFM</a></li>
+  <li><a href="#" style="color: red;" data-toggle="modal" data-target="#Help"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: red;"></span> &nbsp;Palīdzība</a></li>
   <li><a href="/reception/logout/"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> &nbsp;Iziet no sistēmas</a></li>
  </ul>
 
@@ -44,6 +51,7 @@
 {% block content_header %}{% endblock %}
 {% block content %}{% endblock %}
 {% block logsys %}{% endblock %}
+{% block rec_pieraksts %}{% endblock %}
 
 </div>
 
