--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -8,7 +8,7 @@
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
- <th>Nedēļa</th>
+ <th>Nedēļas sākums</th>
 </tr></thead>
 {% for w in week %}
 <tbody>
@@ -18,7 +18,6 @@
 {% endfor %}
 </tbody>
 {% else %}
-
 
 {% for dat in data %}{% for d in dat %}
 <div class="modal fade" id="Graf{{ d.id }}" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
