--- a/grafiks/templates/day_kli_data.html
+++ b/grafiks/templates/day_kli_data.html
@@ -5,6 +5,17 @@
 
 {% block content %}
 
+{% for d in data %}
+<div class="modal fade" id="Cancel{{ d.id }}" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
+ <span class="glyphicon glyphicon-trash" aria-hidden="true" style="font-size:1.5em;"></span>
+ <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button></div>
+<div class="modal-body"><h4>{{ d.klients }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ d.klients.tel }}</h4><h4>{{ d.klients.e_pasts }}</h4></div>
+<div class="modal-footer">
+ <a href="/reception/cancel/{{ d_id }}/{{ g_id }}/{{ d.id }}/"><button type="button" class="btn btn-danger">Atcelt pierakstu</button></a>
+ <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
+</div></div></div></div>
+{% endfor %}
+
 <a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br><br>
 
 <div class="row"><div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -28,7 +39,7 @@
 <tbody>
 {% for d in data %}
 <tr>
- <td><a href="/reception/cancel/{{ d_id }}/{{ g_id }}/{{ d.id }}/"><button type="button" class="btn btn-default btn-xs">Atcelt Pierakstu</button></a></td>
+ <td><button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#Cancel{{ d.id }}">Atcelt Pierakstu</button></td>
  <td>{{ d.pieraksta_laiks|date:"d/m/Y H:i" }}</td>
  <td>{{ d.klients }}</td>
  <td>{{ d.klients.e_pasts }}</td>
