--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -30,7 +30,8 @@
 </div></div></div></div>
 {% endfor %}{% endfor %}
 
-<a href="/reception/plan/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br>
+<a href="/reception/plan/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
+
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
