--- a/grafiks/templates/day_kli_data.html
+++ b/grafiks/templates/day_kli_data.html
@@ -29,6 +29,7 @@
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
  <th></th>
+ <th>Nr.pk.</th>
  <th>Pierakstīšanās laiks</th>
  <th>Vārds Uzvārds</th>
  <th>E-pasts</th>
@@ -39,7 +40,8 @@
 <tbody>
 {% for d in data %}
 <tr>
- <td><button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#Cancel{{ d.id }}">Atcelt Pierakstu</button></td>
+ <td><button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#Cancel{{ d.id }}">Atcelt Pierakstu</button></td>
+ <td>{{ forloop.counter }}</td>
  <td>{{ d.pieraksta_laiks|date:"d/m/Y H:i" }}</td>
  <td>{{ d.klients }}</td>
  <td>{{ d.klients.e_pasts }}</td>
