--- a/templates/admin.html
+++ b/templates/admin.html
@@ -32,8 +32,16 @@
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
   <li><a target="_blank" href="http://85.9.209.213/adminlucy12345/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
-  <li><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Nodarbību dzēšana</a></li>
-<!--  <li><a href="/reception/add/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li> -->
+  <li><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
+  <li class="dropdown">
+   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+     <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;izmaiņas grafikā&nbsp;<span class="caret"></span></a>
+    <ul class="dropdown-menu">
+     <li><a href="/reception/add/">Pievienot nodarbību</a></li>
+     <li role="separator" class="divider"></li>
+     <li><a href="#">Noņemt nodarbību</a></li>
+    </ul>
+  </li>
 {% endif%}
  </ul>
 
