--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -4,17 +4,27 @@
 {% endblock %}
 
 {% block content %}
+<script>
+jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+</script>
 {% if week %}
 <div class="container">
+
+<div class="alert alert-danger">
+  <center><strong>Svarīgi!</strong> Visa tabulas rinda ir <i>"spiežama"</i> (links uz nedēļu)</center>
+</div>
+
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
  <th>Nedēļas sākums</th>
 </tr></thead>
-{% for w in week %}
 <tbody>
-<tr>
- <td><a href="/reception/plan/{{ forloop.counter0 }}/">{{ w|date:"d M" }}</a></td>
-</tr>
+{% for w in week %}
+<tr class="clickable-row" data-href="/reception/plan/{{ forloop.counter0 }}/"><td>{{ w|date:"d M" }}</td></tr>
 {% endfor %}
 </tbody>
 {% else %}
