--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,6 +11,10 @@
  <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
 {% block javascript %}{% endblock %}
 <style>
+
+.navbar-default { background-color: #eee; border-bottom: 1px solid #ddd !important; }
+.divider-vertical { height: 50px; border-right: 2px solid #ccc; }
+
 {% block style %}{% endblock %}</style>
 </head>
 <body>
@@ -30,10 +34,12 @@
 
  <ul class="nav navbar-nav navbar-xs">
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
-  <li><a target="_blank" href="http://85.9.209.213/adminlucy12345/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
+  <li><a target="_blank" href="/admin/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
-  <li><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
-  <li class="dropdown">
+<!--  <li class="divider-vertical"></li> -->
+  <li style="background-color: #FF8080; color: #FFC0CB;"><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
+<!--  <li class="divider-vertical"></li> -->
+  <li style="background-color: #FF8080; color: #FFC0CB;" class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;izmaiņas grafikā&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
@@ -42,11 +48,12 @@
      <li><a href="#">Noņemt nodarbību</a></li>
     </ul>
   </li>
+<!--  <li class="divider-vertical"></li> -->
 {% endif%}
  </ul>
 
  <ul class="nav navbar-nav navbar-right">
-  <li><a href="#" style="color: red;" data-toggle="modal" data-target="#Help"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: red;"></span> &nbsp;Palīdzība</a></li>
+  <li><a href="#" style="color: #CC0000;" data-toggle="modal" data-target="#Help"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: #CC0000;"></span> &nbsp;Palīdzība</a></li>
   <li><a href="/reception/logout/"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> &nbsp;Iziet no sistēmas</a></li>
  </ul>
 
