--- a/grafiks/templates/rec_pierakst.html
+++ b/grafiks/templates/rec_pierakst.html
@@ -4,6 +4,12 @@
 <a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
 
 <div class="col-lg-4 col-md-4 col-lg-offset-4 col-md-offset-4">
+
+<div class="alert alert-danger">
+  <center><strong>Svarīgi!</strong> Vadot klienta datus, ja klients ir jau reģistrējies e-pasts uzrādīsies no WEB pieraksta</center>
+  <center><strong>e-pastu vēlams ievadīt, protams ja tāds ir.</strong></center>
+</div>
+
 {% if msg %}
  <div class="alert alert-success" role="alert">
   <span class="glyphicon glyphicon-ok" aria-hidden="true"> </span>
