--- a/templates/admin.html
+++ b/templates/admin.html
@@ -46,6 +46,8 @@
      <li><a href="/reception/add/">Pievienot nodarbību</a></li>
      <li role="separator" class="divider"></li>
      <li><a href="#">Noņemt nodarbību</a></li>
+     <li role="separator" class="divider"></li>
+     <li><a href="#">Treneru aizvietošana</a></li>
     </ul>
   </li>
 <!--  <li class="divider-vertical"></li> -->
