rec/hist added, datepicker added

--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -24,11 +24,7 @@ jQuery(document).ready(function($) {
 </script>
 
 <div class="alert alert-danger">
- <center><strong>Svarīgi!</strong> Vairs nav iespējams atcelt pierakstus uz <i><u>jau notikušām</u></i> nodarbībām !!!</center>
-</div>
-
-<div class="alert alert-warning">
- <center><strong>Svarīgi!</strong> Pašlaik nav iespējams aplūkot pierakstus uz nodarbībām, kuras ir notikušas <strong><i><u>līdz 23/04</u></i></strong>, tiek veiktas izmaiņas sistēmā!</center>
+ <center><strong>Svarīgi!</strong> Iepriekšējo dienu pierakstu dati <b>TIEK</b> pārvietoti uz sadaļu <strong><i>Vēsture</i></strong>.</center>
 </div>
 
 <tbody>
