--- a/grafiks/templates/rec_pierakst.html
+++ b/grafiks/templates/rec_pierakst.html
@@ -7,7 +7,11 @@
 
 <div class="alert alert-danger">
   <center><strong>Svarīgi!</strong> Vadot klienta datus, ja klients ir jau reģistrējies e-pasts uzrādīsies no WEB pieraksta</center>
-  <center><strong>e-pastu vēlams ievadīt, protams ja tāds ir.</strong></center>
+  <center><strong>e-pastu vēlams ievadīt, protams, ja tāds ir.</strong></center>
+</div>
+
+<div class="alert alert-warning">
+  <center><strong>!</strong> JA TĀLRUŅA NUMURS SAKRĪT AR VAIRĀK NEKĀ VIENU KLIENTU, TAD ŠAJOS GADĪJUMOS SISTĒMA PAR TO PAZIŅOS</center>
 </div>
 
 {% if msg %}
