--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -5,8 +5,9 @@
 
 {% block content %}
 
-<div class="alert alert-danger">
-  <center><strong>!!! Nodarbību atcelšana !!!</strong></center>
+<div class="alert alert-warning">
+  <center><strong>!!! Treneru aizvietošana !!!</strong>
+</center>
 </div>
 
 <script>
