--- a/grafiks/templates/rec_pier_success.html
+++ b/grafiks/templates/rec_pier_success.html
@@ -4,6 +4,13 @@
 <a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
 
 <div class="col-lg-4 col-md-4 col-lg-offset-4 col-md-offset-4">
+
+{% if tel_msg %}
+<div class="alert alert-danger">
+ <strong>&nbsp;&nbsp; ŠIS TĀLRUNIS TIEK IZMANTOTS VAIRĀKIEM KLIENTIEM !!!</strong>
+</div>
+{% endif %}
+
  <div class="alert alert-success" role="alert">
   <span class="glyphicon glyphicon-ok" aria-hidden="true"> </span>
   <strong>&nbsp;&nbsp; Pieraksts izdevies sekmīgi</strong>
