--- a/templates/admin.html
+++ b/templates/admin.html
@@ -33,12 +33,11 @@
 <div class="collapse navbar-collapse" id="topNavbar">
 
  <ul class="nav navbar-nav navbar-xs">
+  <li><a href="/reception/hist/"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span> &nbsp;Vēsture</a></li>
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
   <li><a target="_blank" href="/admin/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
-<!--  <li class="divider-vertical"></li> -->
   <li style="background-color: #FF8080; color: #FFC0CB;"><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
-<!--  <li class="divider-vertical"></li> -->
   <li style="background-color: #FF8080; color: #FFC0CB;" class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;izmaiņas grafikā&nbsp;<span class="caret"></span></a>
