vesture - ok, back button missing

--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -24,7 +24,7 @@ jQuery(document).ready(function($) {
 </script>
 
 <div class="alert alert-danger">
- <center><strong>Svarīgi!</strong> Iepriekšējo dienu pierakstu dati <b>TIEK</b> pārvietoti uz sadaļu <strong><i>Vēsture</i></strong>.</center>
+ <center><strong>Svarīgi!</strong> Iepriekšējo dienu pierakstu dati ir pārvietoti uz sadaļu <strong><i>Vēsture</i></strong>.</center>
 </div>
 
 <tbody>
