--- a/templates/admin.html
+++ b/templates/admin.html
@@ -64,6 +64,7 @@
 <h2>{{ title }}</h2>
 {% if subtitle %}<h3>{{ subtitle|date:"d/m/Y H:i" }}</h3>{% endif %}
 
+{% block history_header %}{% endblock %}
 {% block content_header %}{% endblock %}
 {% block content %}{% endblock %}
 {% block logsys %}{% endblock %}
