grafiks views - separated

--- a/grafiks/templates/hist_date_cancel.html
+++ b/grafiks/templates/hist_date_cancel.html
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block content %}
+<a href="/reception/hist/{{ date }}/"><button type="button" class="btn btn" style="colour: black;">
+<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atgriezties pie izvēlētā datums</button></a><br><br>
+
 <a href="/reception/hist/{{ date }}/{{ g_id }}/p/"><button type="button" class="btn btn-success">Pieteikumi uz nodarbību</button></a><br>
 
 <div class="container">
