--- a/grafiks/templates/history.html
+++ b/grafiks/templates/history.html
@@ -29,8 +29,10 @@
     })
 </script>
 
-<div class="alert alert-warning">
- <center><strong>Svarīgi!</strong> Šajā sadaļā ir iespējams aplūkot tikai datus par jau notikušām nodarbībām!</center>
+<div class="container">
+<!-- <div class="alert alert-warning"> -->
+<!--  <center><strong>Svarīgi!</strong> Šajā sadaļā ir iespējams aplūkot tikai datus par jau notikušām nodarbībām!</center> -->
+<!-- </div> -->
 </div>
 
 {% endblock %}
