--- a/grafiks/templates/hist_date_kli.html
+++ b/grafiks/templates/hist_date_kli.html
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block content %}
-<!-- <a href="/reception/hist/{{ date }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br><br> -->
+<a href="/reception/hist/{{ date }}/"><button type="button" class="btn btn" style="colour: black;">
+<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atgriezties pie izvēlētā datums</button></a><br><br>
 
 <a href="/reception/hist/{{ date }}/{{ g_id }}/c/"><button type="button" class="btn btn-danger">Nodarbību atcēla</button></a><br>
 
