grafiks views - separated

--- a/templates/loginsys.html
+++ b/templates/loginsys.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="LV-LV">
 <head>
-<title>{{ title }}</title>
+<title>{{ heading }}</title>
  <meta charset="UTF-8">
  <link rel="shortcut icon" type="image/png" href="{% static 'vf-logo.png' %}"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 <body>
 
 <div class="container-fluid">
-<h2>{{ title }}</h2>
+<h2>{{ heading }}</h2>
 
 {% block logsys %}{% endblock %}
 
